2019-03-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/pdk14/support.c:
	  Fix regression-test _putchar for pdk14.
	* device/lib/pdk14/__gptrget.s,
	  device/lib/pdk15/__gptrget.s:
	  Fix generic pointer read.

2019-03-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2363.c,
	  support/regression/tests/bug-2756.c,
	  support/regression/tests/gcc-torture-execute-20011008-3.c,
	  support/regression/tests/gcc-torture-execute-20020402-3.c,
	  support/regression/tests/gcc-torture-execute-20100430-1.c,
	  support/regression/tests/gcc-torture-execute-cmpdi-1.c,
	  support/regression/tests/gcc-torture-execute-longlong.c,
	  support/regression/tests/gcc-torture-execute-memcpy-bi.c,
	  support/regression/tests/gcc-torture-execute-mode-dependent-address.c,
	  support/regression/tests/gcc-torture-execute-p18298.c,
	  support/regression/tests/gcc-torture-execute-strcmp-1.c,
	  support/regression/tests/gcc-torture-execute-strcpy-1.c,
	  support/regression/tests/gcc-torture-execute-strncmp-1.c,
	  support/regression/tests/gcc-torture-execute-struct-cpy-1.c,
	  support/regression/tests/new_wide.c,
	  support/regression/tests/wchar.c
	  support/regression/tests/bug-2684.c,
	  support/regression/tests/bug-2732.c,
	  support/regression/tests/dhrystone.c,
	  support/regression/tests/gcc-torture-execute-20050826-1.c,
	  support/regression/tests/gcc-torture-execute-991216-1.c,
	  support/regression/tests/gcc-torture-execute-pr47538.c,
	  support/regression/tests/gcc-torture-execute-pr68532.c,
	  support/regression/tests/qsort.c:
	  Disable tests that won't work for pdk14 due to lack of memory.
	* sdas/asxxsrc/asout.c,
	  sdas/linksrc/lkrloc3.c,
	  sim/ucsim/pdk.src/pdk.cc,
	  sim/ucsim/pdk.src/inst.cc:
	  pdk14 fixes, patch by Nicolas Lesser.

2019-03-04 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asxxsrc/asout.c:
	  Assembler fix, patch by Nicolas Lesser.
	* sim/ucsim/Makefile.in,
	  sim/ucsim/configure,
	  sim/ucsim/configure.ac,