@@ -101,14 +101,14 @@ struct dis_entry disass_pdk_14[]= {
   { 0x0069, ~0x00FF, ' ', 2, "neg" },
   { 0x1480, ~0x007F, ' ', 2, "neg %m" },
 
-  { 0x1C00, ~0x003F, ' ', 2, "set0 %i, %k" },
-  { 0x2400, ~0x003F, ' ', 2, "set0 %m, %k" },
-  { 0x1E00, ~0x003F, ' ', 2, "set1 %i, %k" },
-  { 0x2600, ~0x003F, ' ', 2, "set1 %m, %k" },
-  { 0x1800, ~0x003F, ' ', 2, "t0sn %i, %k" },
-  { 0x2000, ~0x003F, ' ', 2, "t0sn %m, %k" },
-  { 0x1A00, ~0x003F, ' ', 2, "t1sn %i, %k" },
-  { 0x2200, ~0x003F, ' ', 2, "t1sn %m, %k" },
+  { 0x1C00, ~0x01FF, ' ', 2, "set0 %i, %k" },
+  { 0x2400, ~0x01FF, ' ', 2, "set0 %m, %k" },
+  { 0x1E00, ~0x01FF, ' ', 2, "set1 %i, %k" },
+  { 0x2600, ~0x01FF, ' ', 2, "set1 %m, %k" },
+  { 0x1800, ~0x01FF, ' ', 2, "t0sn %i, %k" },
+  { 0x2000, ~0x01FF, ' ', 2, "t0sn %m, %k" },
+  { 0x1A00, ~0x01FF, ' ', 2, "t1sn %i, %k" },
+  { 0x2200, ~0x01FF, ' ', 2, "t1sn %m, %k" },
 
   { 0x2A00, ~0x00FF, ' ', 2, "ceqsn %k" },
   { 0x1700, ~0x007F, ' ', 2, "ceqsn %m" },
