@@ -5,6 +5,9 @@
 	* device/lib/pdk14/__gptrget.s,
 	  device/lib/pdk15/__gptrget.s:
 	  Fix generic pointer read.
+	* sim/ucsim/pdk.src/glob.cc,
+	  sim/ucsim/pdk.src/inst.cc:
+	  pdk14 bit instruction fix, patch by Nicolas Lesser.
 
 2019-03-05 Philipp Klaus Krause <pkk AT spth.de>
 
